--- a/css/style.css
+++ b/css/style.css
@@ -24,24 +24,25 @@ figure{
 	margin: 0;
 }
 
+figcaption{
+	display: none;
+}
+
 .main-header{
-	width: 1200px;
+	max-width: 1200px;
 	margin: auto;
 	padding: 20px 0;
-	border: solid 1px red;
 }
 
 .logo{
 	float: left;
-	border: solid 1px green;
 }
 
 .main-nav{
 	float: right;
-	border: solid 1px red;
 	margin: 8px 0 0 15px;
 }
-
+/*
 /*esto lo agregue yo*/
 .main-nav li a{
 	text-transform: capitalize;
@@ -65,7 +66,7 @@ figure{
 }
 
 .container{
-	width: 1200px;
+	max-width: 1200px;
 	margin: auto;
 }
 
@@ -82,18 +83,15 @@ figure{
 }
 
 .register{
-	background-color: #fff
-}
-
-.register{
-background-color: #06b4f2;
-position: relative;
-top: 30px; 
+	background-color: #fff;
+	background-color: #06b4f2;
+	position: relative;
+	top: 30px; 
 }
 
 .register input{
-	width: 1000px;
-	height: 60px;
+	width: 83.333%;
+	height: 50px;
 	font-size: 16px;
 	font-family: inherit;
 }
@@ -101,8 +99,8 @@ top: 30px;
 .register button{
 	border: none;
 	background-color: #06b4f2;
-	width: 195px;
-	height: 60px;
+	width: 16.66%;
+	height: 50px;
 	color: #fff;
 	font-family: inherit;
 	font-size: 16px;
@@ -110,9 +108,421 @@ top: 30px;
 }
 
 .productos{
-	border: dashed 1px green;
-	width: 300px;
+	width: 25%;
+	text-align: center;
+	float: left;
+	margin-top: 8%;
+}
+
+.productos h4{
+	text-transform: uppercase;
+}
+
+.titulos{
+	text-align: center;
+	margin-top: 50px;
+	margin-bottom: -50px;
+}
+.left-services{
+	width: 33.33%;
 	text-align: center;
 	float: left;
 	margin-top: 80px;
 }
+
+.left-services li{
+	position: relative;
+	text-align: right;
+	padding-right: 60px;
+}
+
+.left-services img{
+	position: absolute;
+	top: 0;
+	right:0;
+}
+.center-phone{
+	width: 33.33%;
+	text-align: center;
+	float: left;
+	margin-top: 80px;
+}
+.right-services{
+	width: 33.33%;
+	text-align: center;
+	float: left;
+	margin-top: 80px;
+}
+
+.right-services li{
+	position: relative;
+	text-align: left;
+	padding-left: 60px;
+}
+
+.right-services img{
+	position: absolute;
+	left: 0;
+	top:0;
+}
+
+#banner2{		
+	background: url(../images/pricing-bg.jpg) center top no-repeat;
+	background-size: contain;
+	margin-top: -80px;
+}
+
+.container-price{
+	padding-top: 90px;
+	text-align: center;
+}
+
+.precios{
+	float: left;
+	width: 20%;
+	margin: 2.5%; 
+	padding: 3% 1% 3% 1%;
+	border: 1px #ddd;
+	background-color: #fff;
+	box-shadow: 1px 1px 2px #ddd;
+}
+
+.precios table{
+	width: 100%;
+	border-top: solid 1px #ddd;
+	text-align: justify;
+	margin-bottom: 5%;
+	
+}
+
+.numerito{
+	color: orange;
+}
+
+.botones-precios{
+	background-color: #33bbff;
+	border-radius: 3px;
+	text-transform: uppercase;
+	text-align: center;
+	color: #fff;
+	font-size: 10px;
+	font-weight: bold;
+	text-decoration: none;
+	padding: 5px 15px 5px 15px;
+}
+
+footer h3{
+	background: #003366;
+	margin-bottom: 0;
+	padding: 5% 10px 5% 10px;
+	font-weight: normal;
+	text-align: center;
+	color: #fff;
+}
+
+span{
+	font-weight: bold;
+	color: #33bbff;
+}
+
+.container-footer{
+	background: #001133;
+	color: #fff;
+}
+
+.container-footer p{
+	float: left;
+	font-weight: normal;
+	margin: 15px 0% 15px 8%;
+}
+
+.footer-nav{
+	float: right;
+	margin: 15px 8% 15px 0%;
+}
+
+.footer-nav li{
+	float: left;
+	margin-right: 20px;
+}
+
+.footer-nav a{
+	text-decoration: none;
+	font-weight: normal;
+	color: #fff;
+}
+
+img{
+	max-width: 100%;
+}
+/* ******************************* */
+/* ||||||||||||||||||||||||||||||| */
+/*          CONTACT  PAGE          */
+/* ||||||||||||||||||||||||||||||| */
+/* ******************************* */
+
+#banner-contact{
+	background: url(../images/indexbanner-bg2.jpg) center top no-repeat;
+	background-size: cover;
+	padding-bottom: 10%;
+}
+
+.titulos-contact{
+	text-align: center;
+	margin-top: 8%;
+}
+
+.datos-personales{
+	float: left;
+	width: 45%;
+	margin-left: 4%;
+}
+
+.register-contact input{
+	width: 100%;
+	height: 30px;
+	margin-bottom: 10px;
+}
+
+.mensaje{
+	float: right;
+	width: 45%;
+	height: 110px;
+	margin-right: 4%;
+	background-color: red;
+}
+/* esto no me esta funcionando */
+.register-contact-mensage input{
+	float: right;
+	width: 100%;
+	height: 110px;
+}
+
+.boton-submit{
+	text-align: center;
+	margin-top: 20px;
+}
+
+.boton-submit1{
+	background-color: #33bbff;
+	border-radius: 3px;
+	text-transform: uppercase;
+	text-align: center;
+	color: #fff;
+	font-size: 10px;
+	font-weight: bold;
+	text-decoration: none;
+	padding: 5px 15px 5px 15px;
+}
+
+
+/* ******************************* */
+/* ||||||||||||||||||||||||||||||| */
+/*            RESPONSIVE           */
+/* ||||||||||||||||||||||||||||||| */
+/* ******************************* */
+
+@media (max-width: 800px){
+	.container, .main-header{
+		width: 95%;
+	}
+
+	.productos{
+		width: 50%;
+		margin-top: 60px;
+	}
+
+	.left-services, .center-phone, .right-services{
+		float: none;
+		width: 100%;
+	}
+
+	.left-services li{
+		position: relative;
+		text-align: left;
+		padding-left: 60px;
+	}
+
+	.left-services img{
+		position: absolute;
+		left: 0;
+		top:0;
+	}
+	
+	#banner2{
+		margin-top: 0;
+	}
+
+	.container-price h2{
+		margin-top: -7%;
+	}
+
+	.precios{
+		width: 45%;
+	}
+
+	.precios h4{
+		font-size: 15px;
+	}
+
+	.precios{
+		font-size: 12px;
+	}
+
+	.footer-nav{
+		float: none;
+		width: 100%;
+		text-align: center;
+		margin-top: 0;
+	}
+
+	.container-footer p{
+		float: none;
+		width: 100%;
+		margin: 0;
+		padding-bottom: 10px;
+		text-align: center;
+	}
+
+	.footer-nav li{
+		float: none;
+		margin:0;
+		padding-top: 2%;
+	}
+}
+
+
+@media (max-width: 600px){
+	.container,.main-header{
+		width: 95%;
+	}
+
+	.main-header{
+		margin-bottom:-50px;
+	}
+
+	#banner{
+		background: none;
+
+	}
+
+	.banner-title{
+		display: none;
+	}
+	
+	.banner-parrafo{
+		display: none;
+	}
+
+	.main-header{
+		float: none;
+		text-align: center;
+
+	}
+	.logo{
+		float: none;
+	}
+
+	.main-nav{
+		float: none;
+		margin: 0;
+		padding: 0;
+	}
+
+	.main-nav li{
+		float: none;
+	}
+	
+	.register input{
+		width: 80%;
+	}
+
+	.register button{
+		width: 20%;
+		padding: 2px;
+	}
+
+	.container-price {
+		padding-top: 50px;
+	}
+
+	.container-price p{
+		margin-bottom: 50px;
+	}
+
+/* ******************************* */
+/* ||||||||||||||||||||||||||||||| */
+/*          CONTACT  PAGE          */
+/* ||||||||||||||||||||||||||||||| */
+/* ******************************* */
+
+	#banner-contact{
+		background: none;
+	}
+	.datos-personales{
+		float: none;
+		width: 100%;
+		margin: 0;
+	}
+	.mensaje{
+		float: none;
+		width: 100%;
+		height: 100px;
+	}
+
+	.register-contact-mensage input{
+		width: 100%;
+		height: 100px;
+	}
+}
+
+@media (max-width: 420px){
+	h2{
+		font-size: 17px;
+	}
+
+	h3{
+		font-size: 15px;
+	}
+
+	p{
+		font-size: 12px;
+	}
+
+	.register input{
+		width: 70%;
+	}
+
+	.register button{
+		width: 30%;
+		padding: 2px
+	}
+
+	.productos{
+		width: 100%;
+		margin-top: 0;
+	}
+
+	.productos:first-of-type{
+		margin-top: 50px;
+	}
+
+	.titulos{
+		margin: 0;
+	}
+
+	.left-services, .center-phone, .right-services{
+		margin: 0;
+	}
+
+	.container-price {
+		padding-top: 35px;
+	}
+
+	.container-price h2:{
+	}
+
+}
+
+
+
